--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap');
 
 *{
     margin: 0;
@@ -20,6 +20,7 @@
 }
 
 .w50 {
+    padding: 0 2%;
     width: 50%;
 }
 
@@ -36,17 +37,21 @@
     clear: both;
 }
 
+img {
+    width: 100%;
+}
+
 /**Estilização**/
 
 header {
     padding: 20px 0;
     background: #3d437a;
+    border-bottom: 1px solid #333866;
 }
 
 header .logo {
     font-size: 25px;
     font-weight: 300;
-    text-transform: uppercase;
     color: white;
 }
 
@@ -64,11 +69,188 @@ nav.desktop li {
     font-weight: 300;
     font-size: 15px;
     padding: 0 30px;
-    text-transform: uppercase;
     display: inline-block;
 }
 
 nav.desktop a {
+    background-color: none;
     color: white;
     text-decoration: none;
+    border-color: none;
+    letter-spacing: 1px;
+}
+
+nav.desktop a:hover { /*Transição mais suave ao passar o mouse*/
+    text-shadow:
+    0 -0.4px 0 white,
+    0 0.4px 0 white,
+    0.4px 0 0 white,
+    -0.4px 0 0 white;
+    -webkit-transition: all .4s;
+    -moz-transition: all .4s;
+    -o-transition: all .4s;
+    transition: all .4s;
+}
+
+.banner-principal {
+    width: 100%;
+    height: 600px;
+    background-image: url('./images/bg.jpg');
+    background-size: cover;
+    position: relative;
+}
+
+.overlay {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    z-index: 1;
+}
+
+.banner-principal form {
+    width: 90%;
+    max-width: 500px;
+    z-index: 2;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+}
+
+.banner-principal form h2 {
+    color: white;
+    font-weight: 300;
+    font-size: 30px;
+    text-align: center;
+}
+
+.banner-principal form input[type=email] {
+    width: 100%;
+    height: 57px;
+    background: white;
+    color: #333;
+    font-size: 20px;
+    padding-left: 15px;
+    margin-top: 10px;
+    border-style: none;
+    outline: none; /* Remove borda do input ao clicar */
+    border: 1px solid #ccc;
+    border-radius: 7px;
+    box-shadow: 0px 10px 50px #00000056; /* Sombra: eixo X - eixo Y - blur - cor */
+}
+
+.banner-principal form input[type=email]:-webkit-autofill {
+    -webkit-box-shadow: 0 0 0 30px white inset; /* Cor de fundo do autocomplete */
+    -webkit-text-fill-color: #333; /* Cor do texto do autocomplete */
+}
+
+.banner-principal form input[type=submit] {
+    width: 40%;
+    height: 52px;
+    background: #3d437a;
+    color: white;
+    font-size: 20px;
+    font-weight: 600;
+    letter-spacing: 0.8px;
+    text-transform: uppercase;
+    margin-top: 12px;
+    margin-left: 30%;
+    border-style: none;
+    border: 1px solid #383d6e;
+    border-radius: 7px;
+    box-shadow: 0px 10px 50px #00000056; /* Sombra: eixo X - eixo Y - blur - cor */
+    cursor: pointer;
+}
+
+.banner-principal form input[type=submit]:hover {
+    background: #2e325c;
+    border: 1px solid #272a4e;
+    transition: .3s;
+}
+
+.descricao-autor {
+    padding: 30px 0;
+}
+
+.descricao-autor h2 {
+    font-size: 27px;
+    font-weight: 400;
+    color: #444;
+}
+
+.descricao-autor p {
+    font-size: 16px;
+    color: #444;
+    margin-top: 10px;
+}
+
+.descricao-autor img {
+    border-radius: 4px;
+}
+
+.foto {
+    display: flex;
+    justify-content: center; /*Centralizar a div da imagem na horizontal*/
+}
+
+@media screen and (min-width: 781px) {
+    img {
+        width: 70%;
+        max-width: 300px;
+        margin-left: 16%;
+    }
+}
+
+@media screen and (max-width: 780px) {
+    img {
+        float: none impot !important;
+        display: block;
+        margin: 0 auto;
+        max-width: 300px;
+    }
+    .w50 {
+        padding: 20px;
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    nav.desktop {
+        display: none;
+    }
+    nav.mobile {
+        display: block;
+    }
+    .botao-menu-mobile {
+        font-size: 24px;
+        cursor: pointer;
+        color: white;
+    }
+    nav.mobile ul {
+        margin-top: 20px;
+        width: 100%;
+        z-index: 3;
+        position: absolute;
+        left: 0;
+        top: 55px;
+        display: block;
+        text-align: center;
+    }
+    nav.mobile li {
+        font-weight: 300;
+        display: block;
+        background: white;
+        border-bottom: 1px solid rgb(243, 243, 243);
+        font-size: 17px;
+        padding: 8px 0;
+    }
+    nav.mobile li a {
+        display: block;
+        color: #444;
+        text-decoration: none;
+    }
 }
