--- a/style.css
+++ b/style.css
@@ -173,7 +173,7 @@ nav.desktop a:hover { /*Transição mais suave ao passar o mouse*/
 }
 
 .descricao-autor {
-    padding: 80px 0;
+    padding: 80px 70px;
 }
 
 .descricao-autor h2 {
@@ -183,7 +183,7 @@ nav.desktop a:hover { /*Transição mais suave ao passar o mouse*/
 }
 
 .descricao-autor p {
-    font-size: 16px;
+    font-size: 14.5px;
     color: #444;
     margin-top: 10px;
     text-align: justify;
@@ -194,13 +194,8 @@ nav.desktop a:hover { /*Transição mais suave ao passar o mouse*/
     border-style: outset;
 }
 
-.foto {
-    display: flex;
-    justify-content: center; /*Centralizar a div da imagem na horizontal*/
-}
-
 .especialidades {
-    padding: 50px 0;
+    padding: 50px 70px;
     background: #e2e2e2;
 }
 
@@ -232,15 +227,70 @@ nav.desktop a:hover { /*Transição mais suave ao passar o mouse*/
     margin-bottom: 20px;
     cursor: default;
     font-weight: 300;
-    font-size: 32px;
+    font-size: 27px;
     color: rgb(99, 99, 99);
 }
 
 .box-especialidade p {
     margin: 10px 20px;
     letter-spacing: 0.5px;
+    font-size: 14.5px;
     color: #444;
     text-align: justify;
+}
+
+.extras {
+    color: white;
+    font-weight: 300;
+    padding: 50px 70px 100px;
+    background: #404580;
+    letter-spacing: 0.5px;
+    font-size: 14.5px;
+}
+
+.extras .title {
+    letter-spacing: 0;
+    font-size: 25px;
+    font-weight: 300;
+    padding-bottom: 20px;
+}
+
+.depoimento-single{
+    padding: 35px 40px 35px 0;
+    border-bottom: 1px solid #515797;
+}
+
+.depoimento-single:last-child {
+    border: none;
+}
+
+.depoimento-descricao {
+    text-align: justify;
+    padding-bottom: 30px;
+}
+
+.nome-autor {
+    font-weight: 400;
+}
+
+.extras h3 {
+    padding-left: 35px;
+}
+
+.servicos {
+    padding: 35px 0 35px 40px;
+}
+
+.servicos li {
+    padding-bottom: 30px;
+}
+
+footer {
+    color: white;
+    padding: 20px 0;
+    background: #212657;
+    font-weight: 300;
+    text-align: center;
 }
 
 @media screen and (min-width: 781px) {
@@ -253,7 +303,7 @@ nav.desktop a:hover { /*Transição mais suave ao passar o mouse*/
 
 @media screen and (max-width: 780px) {
     img {
-        float: none impot !important;
+        float: none !important;
         display: block;
         margin: 0 auto;
         max-width: 300px;
