--- a/style.css
+++ b/style.css
@@ -282,6 +282,7 @@ nav.desktop a:hover { /*Transição mais suave ao passar o mouse*/
 }
 
 .servicos li {
+    list-style-position: inside;
     padding-bottom: 30px;
 }
 
